2025-09-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (+gnus-read-ephemeral-emacs-search-group): Really really
	fix it!!

2025-09-18  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Bring back reader.

2025-09-18  Zhengyi Fu  <i@fuzy.me>

	Mark ctags-optlib-mode as obsolete

	* site-lisp/ctags-optlib-mode.el:
	* site-lisp/obsoletes/ctags-optlib-mode.el:

2025-09-18  Zhengyi Fu  <i@fuzy.me>

	Improve buffer cleanup in straight repository review

	* init.el (+straight-review-updated-repos): Add cleanup of magit
	process buffers for better resource management.  Capture magit
	process buffer in proc-buf variable and ensure it's killed when no
	longer active.

2025-09-17  Zhengyi Fu  <i@fuzy.me>

	Really fix `+gnus-read-ephemeral-emacs-search-group'

	* init.el (+gnus-read-ephemeral-emacs-search-group): Require
	`gnus-group'.

2025-09-17  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/telega-config.el (telega): set default-directory to ~/.

2025-09-17  Zhengyi Fu  <i@fuzy.me>

	Improve gptel-tools user rejection message clarity

	* site-lisp/gptel-tools.el (gptel-tools--ediff-file-with-buffer):
	Update the tool results for rejected changes to provide clearer
	feedback when users reject proposed changes.  The message now
	clearly states that changes were not applied and provides better
	formatting for user-requested modifications.

2025-09-17  Zhengyi Fu  <i@fuzy.me>

	Improve help-fns-function-source-code robustness

	* init.el (help-fns-function-source-code): Rewrite function to use
	condition-case to ignore errors.  Preserve buffer and point
	positions during source code extraction.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Fix +gnus-read-ephemeral-emacs-search-group

	* init.el (+gnus-read-ephemeral-emacs-search-group): Require `mml' and `mm-url'.
	(url-http-response-status): Declare the variable.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Unify error handling in gptel-tools.el

	* site-lisp/gptel-tools.el (gptel-tools--write-file-async)
	(gptel-tools--insert-async, gptel-tools--grep-async)