@@ -1,5 +1,12 @@
 2025-09-18  Zhengyi Fu  <i@fuzy.me>
 
+	Improve ediff setup in gptel-tools
+
+	* site-lisp/gptel-tools.el (gptel-tools--ediff-buffers): Ensure
+	new buffer uses the same major mode as old buffer.
+
+2025-09-18  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (+gnus-read-ephemeral-emacs-search-group): Really really
 	fix it!!
 
